Initial dusite commit

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <link href='https://fonts.googleapis.com/css?family=Titillium+Web:400,600|Lato' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
     <link rel="stylesheet" href="main.css">
-    <title>Graham Park</title>
-    <link rel="shortcut icon" href="assets/gp.ico" />
+    <title>John Du</title>
     
   </head>
 
@@ -16,10 +15,9 @@
 
     <div class="jumbotron">
       <div class="container">
-        <img title="" src="./assets/gp_small.png" height ="115" width ="115">
-        <h1>Graham Park</h1>
-        <p>Purdue University | Computer Science | Security </p>
-<!--         <p>./Purdue_University/Computer_Science/Security </p> -->
+        <h1>John Du</h1>
+	<br>
+        <p>Software Engineer | Pixel Artist | Game Developer</p>
       </div>
     </div> 
 
@@ -29,11 +27,13 @@
         <div class="col-md-5">
           <p></p>
           <h2>About Me</h2>
-          <p>Currently at Purdue University, I'm in my third year studying computer science. I chose security as my focus within computer science because of the challenges that come with it. I love turning a piece of code around and trying to look at it in ways that aren't necessarily apparent. Security also offers a chance to work on some of the most important issues within a company, with real impact on the customers and the company itself, which is a role that I find really cool.</p>
-          <p>I also love learning new things and getting new experiences, and that applies within computer science as well as outside of it. Lately I've been trying to get into photography and travel, so feel free to check out my pictures or blog!</p>
+          <p>I'm John Du, senior at Purdue University majoring in Computer Science with a focus in Software Engineering and Security. I like to think of myself as a creator. Code is just another way to create great things. It's why I make pixel art. It's why I develop games in my spare time.</p>
+	  <p>Check out my pixel art portfolio! I'm always working to improve my skills, but I do take commissions for pixel art. Email me to start.</p>
         </div>
         <div class="col-md-3">
-          <center><img title="" src="./assets/pro_pic.jpg" height="275" width="275"></center>
+          <center>
+	    <img id="profile" title="" src="./assets/selfie.gif" height="192" width="192">
+	  </center>
         </div>
         <div class="col-md-2"></div>
       </div>
@@ -42,37 +42,31 @@
     <div class="profiles">
         <div class="container">
             <h2>What are you here for?</h2>
-            <p>Whatever it is that brought you here, follow the links below and hopefully they'll get you where you need to be</p>
             <div class="row">
                 <div class="col-md-4">
                     <h3>Professional</h3>
-                    <p>Head over to check out my Linkedin and Github profiles.<br></p>
-                    <center>
-                        <a class="transparent" target="_blank" href="https://www.linkedin.com/in/grahamjpark">
-                            <img title="" src="./assets/linkedin_badge.png" height="60" width="60">
-                        </a>             
-                        <a class="transparent" target="_blank" href="https://github.com/grahamjpark">
-                            <img title="" src="./assets/github_badge.png" height="60" width="60">
-                        </a>
-                    </center>
+		    <p>
+			<img src="./assets/linkedin_badge.png" height="16" width="16" />
+			<a href="https://www.linkedin.com/in/johndu9">LinkedIn</a>
+			<br>
+			<img src="./assets/github_badge.png" height="16" width="16" />
+			<a href="https://github.com/johndu9">GitHub</a>
+			<br>
+			<a href="./assets/John Du Resume.pdf">Resume</a>
+		    </p>
                 </div>
                 <div class="col-md-4">
-                    <h3>Photography</h3>
-                    <p>Hear that I was getting into photography, or looking for a picture that I took? Check out my Flickr profile!</p>
-                    <center>
-                        <a class="transparent" target="_blank" href="https://www.flickr.com/photos/132760830@N06/">
-                            <img title="" src="./assets/flickr_badge.png" height="60" width="60">
-                        </a>
-                    </center>
+                    <h3>Pixel Art</h3>
+                    <p>
+			<img src="./assets/pixel_badge.png" height="16" width="16">
+                        <a href="https://twitter.com/desukase">Twitter</a>
+                    </p>
                 </div>
                 <div class ="col-md-4">
-                    <h3>Blog</h3>
-                    <p>Read some of my thoughts about recent experiences that I've had.</p>
-                    <center>
-                        <a class="transparent" target="_blank" href="http://prograhaming.com/">
-                            <img title="" src="./assets/svbtle_badge.png" height="60" width="60">
-                        </a>
-                    </center>
+                    <h3>Contact</h3>
+		    <p>
+                        <a href="mailto:du55@purdue.edu">Email</a>
+		    </p>
                 </div>
             </div>
         </div>
