--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <link href='https://fonts.googleapis.com/css?family=Titillium+Web:400,600|Lato' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
     <link rel="stylesheet" href="index.css">
-    <script type="text/javascript" src="files.js"></script>
-    <script type="text/javascript" src="index.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <title>John Du</title>
     
   </head>
@@ -18,7 +17,6 @@
     <div class="jumbotron">
       <div class="container">
         <h1>John Du</h1>
-	<br>
         <p>Software Engineer | Pixel Artist | Game Developer</p>
       </div>
     </div> 
@@ -28,14 +26,13 @@
       <center ><a href="#" onclick="setabout()">About</a> | <a href="#" onclick="setportfolio()">Portfolio</a></center>
       <div class="row">
         <div class="col-md-1"></div>
-        <div class="col-md-7" id="content">
-        </div>
+	<center>
         <div class="col-md-2">
-          <center>
-	    <img id="profile" />
-	  </center>
+	    <a id="profileLink" href="#" target=""><img id="profile" /></a>
         </div>
-        <div class="col-md-2"></div>
+	</center>
+        <div class="col-md-1"></div>
+        <div class="col-md-7" id="content"></div>
       </div>
     </div>
 
@@ -73,6 +70,8 @@
             </div>
         </div>
     </div>
+    <script type="text/javascript" src="files.js"></script>
+    <script type="text/javascript" src="index.js"></script>
 
   </body>
 </html>
