Change site to more general-use, portfolio-based
* Move data/content things to /backend folder
* Utilize make and bash to generate data.js
* Change that trash sudo rm stuff to rsync
* Update .gitignore accordingly
* Update index.html format slightly

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <link href='https://fonts.googleapis.com/css?family=Titillium+Web:400,600|Lato' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
     <link rel="stylesheet" href="index.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <title>John Du</title>
     
   </head>
@@ -15,9 +14,7 @@
     <!-- <div class = "header"></div> -->
 
     <div class="jumbotron">
-      <div class="container">
-        <h1>John Du</h1>
-        <p>Software Engineer | Pixel Artist | Game Developer</p>
+      <div id="header" class="container">
       </div>
     </div> 
 
@@ -70,7 +67,7 @@
             </div>
         </div>
     </div>
-    <script type="text/javascript" src="files.js"></script>
+    <script type="text/javascript" src="data.js"></script>
     <script type="text/javascript" src="index.js"></script>
 
   </body>
